--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,18 @@
     flex-direction: column;
     width: 200px;
     border: 2px solid #000;
+    border-radius: 15px;
+    box-shadow: 0px 5px 5px 0px rgba(0,0,0,1);
+    transition: transform 200ms ease;
+}
+
+.char-img {
+    border-radius: 10px;
+}
+
+.card-div:hover {
+    cursor: pointer;
+    transform: scale(1.05);
 }
 
 img {
