--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Zen Old Mincho', serif;
+    background-color: #fff;
+    color: #4a9f46;
+}
+
 .card-layout {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -9,14 +17,16 @@
     display: flex;
     flex-direction: column;
     width: 200px;
-    border: 2px solid #000;
-    border-radius: 15px;
+    border: 2px solid #ca5329;
     box-shadow: 0px 5px 5px 0px rgba(0,0,0,1);
     transition: transform 200ms ease;
+    background-color: #355E3B;
+    color: #ca5329;
 }
 
-.char-img {
-    border-radius: 10px;
+.card-name {
+    padding: 0.5em;
+    text-align: center;
 }
 
 .card-div:hover {
@@ -27,4 +37,21 @@
 img {
     width: auto;
     height: 200px;
+}
+
+.header {
+    border: 2px solid #fff;
+}
+
+.header-flex {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1em;
+}
+
+.rule-h1 {
+    text-align: center;
+    margin-bottom: 4em;
 }
